[package]
name = "repro-dist-choco-nodejs"
version = "0.1.4"
edition = "2024"
repository = "https://github.com/oeb25/repro-dist-choco-nodejs"

[dependencies]

[workspace.metadata.release]
publish = false
tag-name = "v{{version}}"
shared-version = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
